--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   },
   "dependencies": {
     "sakana-widget": "^2.7.0",
-    "vue": "^3.4.15"
+    "vue": "^3.4.15",
+    "webgl-fluid-enhanced": "^0.6.1"
   },
   "devDependencies": {
     "@tsconfig/node20": "^20.1.2",
