--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "type-check": "vue-tsc --build --force"
   },
   "dependencies": {
+    "parallax-js": "^3.1.0",
     "sakana-widget": "^2.7.0",
     "vue": "^3.4.15",
     "webgl-fluid-enhanced": "^0.6.1"
@@ -21,6 +22,7 @@
     "@vitejs/plugin-vue": "^5.0.3",
     "@vue/tsconfig": "^0.5.1",
     "autoprefixer": "^10.4.19",
+    "daisyui": "^4.12.2",
     "npm-run-all2": "^6.1.1",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3",
